1998-01-05  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Histo.h (Histo): Subclass from ArchivedGeometryWidget.

	* BLTGraph.m ([GraphElement -createEnd]): Use different code
	for setting active line width and symbol between BLT 2.1 and BLT 2.3.
	([GraphElement -setColor:]): Set the active line color to be the
	same as the inactive line color.  Different versions for BLT 2.1
	and BLT 2.3.

	* DragDrop.m (new_BLT_p): Remove.
	(setupDragAndDrop): Use newBLTp method now in TkExtra.
	(setupDragAndDropArg): Likewise.
	(setupHandler): Likewise.

	* TkExtra.m ([TkExtra -newBLTp]): Move new_BLT_p predicate from
	DragDrop and rename it to newBLTp.

	* TkExtra.h: Add newBLTp.

1997-12-16  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* WindowGeometryRecord.h: Remove get_expr_func_t and
	put_string_func_t typedefs.

1997-12-11  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* analysis.tcl: Delete troublesome newlines for parameters
	in first line of active_item_info.

	* control.[hm] (tkobjc_setupHistogramActiveOutlierMarker): Use 
	a descriptive name (was tkobjc_setupHistogramMisc).

1997-12-10  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* simtools.tcl: Delete extra line in sitecmd.

	* XPixmap.m ([XPixmap -setFile:]): Constify argument.
	Reformatting throughout.

	* XPixmap.h (XPixmap): Constify filename.
	Constify argument to setFile.
	Reformatting throughout.

	* XColormap.m ([XColormap -setColor:ToName:]): Constify ToName
	argument.  Reformatting throughout.

	* XColormap.h: Constify ToName argument to setColor.
	Reformatting throughout.

	* Form.m ([Form -addLineName:Variable:Type:]): Constify first
	argument.  Reformatting throughout.

	* Form.h: Constify first argument to addLineName.
	Reformatting throughout.

	* CanvasItem.m: Reformatting throughout.

	* CanvasItem.h (CanvasItem): Constify item.
	Reformatting throughout.

	* RectangleNodeItem.m ([RectangleNodeItem -createItem]): Cast
	argument to free to void* to avoid warning.
	Reformatting throughout.
